programming-language/workspace/compiler/tests/fixtures/invalid/undefined_variable.cb64
# Undefined variable
def main():
    x = undefined_var
